Arreglo en Novedades

--- a/tienda-service/src/main/resources/application.properties
+++ b/tienda-service/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jackson.deserialization.fail-on-unknown-properties=false
 spring.web.cors.allowed-origins=*
 grpc.server.port=9091
-logging.level.org.apache.kafka=warn
-logging.level.org.springframework.kafka=warn
+#logging.level.org.apache.kafka=warn
+#logging.level.org.springframework.kafka=warn
 
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.retries=1
